package org.example;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ApplicationUserClient {

    public static void main(String[] args) {
        SpringApplication.run(ApplicationUserClient.class);
    }
}