package org.example.enums;

public enum RolePermissions {
    ADMIN,
    USER
}
